[package]
name = "xpoz"
version = "0.1.0"
authors = ["Antoni <storm.bg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
log = "0.4"
env_logger = "0.7"
dotenv = "0.15"
config = "0.10"
thiserror = "1"
anyhow = "1"
async-graphql = "2"
async-graphql-actix-web = "2"
sqlx = { version = "0.3", default-features = true, features = ["sqlite"] }
