[package]
name = "xpoz"
version = "0.3.0"
authors = ["Antoni <storm.bg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
notify = "4"
openssl = { version = "0.10", features = ["vendored"] }
actix-service = "1.0.6"
actix-files = "0.5"
actix-session = "0.4"
futures = "0.3"
nanoid = "0.3"
shellexpand = "2"
glob = "0.3"
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"
config = "0.10"
anyhow = "1"
async-graphql = "2"
async-graphql-actix-web = "2"
sqlx = { version = "0.4", default-features = true, features = ["sqlite", "runtime-actix-native-tls"] }
sql-builder = "3"
rusqlite = "0.24"
refinery = { version = "0.5", features = ["rusqlite"] }
walkdir = "2"
